--- a/src/wedding.html
+++ b/src/wedding.html
@@ -57,7 +57,7 @@
 <body>
 <!--Main image-->
 <div class="jumbotron container-fluid py-5">
-  <h1 class="logo display-5 pb-3 text-center">Pictotainment Media Inc.</h1>
+  <h1 class="logo display-5 pb-3 text-center">Wedding & Events</h1>
 </div>
 
 <!--album options-->
@@ -65,33 +65,33 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Wedding Album .jpeg" alt="flowers with rings" title="wedding Album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Wedding & Events</h2>
+        <img src="images/wedding1.jpeg" alt="pink and purple table setting"  class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Wedding Place</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Urban Landscape Album.jpeg" alt="city scape in sunset" title="urban landscape album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Urban Landscapes</h2>
+        <img src="images/wedding2.jpeg" alt="barn wedding table"  class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Wedding table</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Pet Album.jpeg" alt="pug wearing glasses" title="pet album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Pet Photography</h2>
+        <img src="images/wedding3.jpeg" alt="bride with flowers"  class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Bride With Flowers</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Portfolio Album.jpeg" alt="mountain lake" title="portfolio album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Portfolio Shots</h2>
+        <img src="images/wedding4.jpeg" alt="sunset bride and groom"  class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Bride and Groom Sunset</h2>
         </div>
       </div>
     </div>
