--- a/src/urbangallery.html
+++ b/src/urbangallery.html
@@ -57,7 +57,7 @@
 <body>
 <!--Main image-->
 <div class="jumbotron container-fluid py-5">
-  <h1 class="logo display-5 pb-3 text-center">Pictotainment Media Inc.</h1>
+  <h1 class="logo display-5 pb-3 text-center">Urban Landscapes</h1>
 </div>
 
 <!--album options-->
@@ -65,33 +65,33 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Wedding Album .jpeg" alt="flowers with rings" title="wedding Album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Wedding & Events</h2>
+        <img src="images/urban1.jpeg" alt="building front" title="wedding Album" class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Building Front</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Urban Landscape Album.jpeg" alt="city scape in sunset" title="urban landscape album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Urban Landscapes</h2>
+        <img src="images/urban2.jpeg" alt="beach boulevard in sunset" title="urban landscape album" class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Beach Boulevard</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Pet Album.jpeg" alt="pug wearing glasses" title="pet album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Pet Photography</h2>
+        <img src="images/urban3.jpeg" alt="night shot of a bridge with city behind" title="pet album" class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Night Bridge</h2>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
-        <img src="images/Portfolio Album.jpeg" alt="mountain lake" title="portfolio album" class="img-fluid">
-        <div class="portfolio-info">
-          <h2>Portfolio Shots</h2>
+        <img src="images/urban4.jpeg" alt="black and white buildings with plane" title="portfolio album" class="img-fluid">
+        <div class="portfolio-info-2">
+          <h2>Building and Plane</h2>
         </div>
       </div>
     </div>
