hover state/nav corrected

--- a/src/contact.html
+++ b/src/contact.html
@@ -39,89 +39,58 @@
   </nav>
 
   <!-- Main content -->
-  <main class="flex-shrink-0">
-    <!--Contact Form-->
-    <div class="container">
-      <div class="row">
-        <div class="col-12 ">
-          <h1 class="logo display-5 pb-3">Contact</h1>
-        </div>
-        <div class="col-12 col-lg-6">
-          <div class="description">
-            <p>Thank you for your interest in our photography services. Please fill out the forms below. Details we would like to know: Type of session (wedding, pet, other) Preferred date Any special requests Your contact</p>
-          </div>
-          <div class="form w-100 pb-2">
-            <form action="#" class="row">
-              <div class="col-lg-6 col-md mb-3">
-                <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
-              </div>
-              <div class="col-lg-6 col-md mb-3">
-                <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
-              </div>
-              <div class="col-lg-12 mb-3">
-                <input type="email" placeholder="Email address" id="inputEmail" class="shadow form-control form-control-lg">
-              </div>
-              <div class="col-lg-12 mb-3">
-                <textarea name="message" placeholder="Message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
-              </div>
-              <div class="text-center d-grid mt-1">
-                <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">Submit<i class="bi bi-send"></i></button>
-              </div>
-            </form>
+<section class="contact-faq">
+  <div class="container">
+    <div class="faq">
+      <h1>FAQ</h1>
+      <p>Get knowledge before reaching out</p>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item shadow mb-3">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Do you do black background pet sessions?</button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">Yes. I do from small to large animals and will travel to you if enough people want pictures. 3-4 people minimum.</div>
           </div>
         </div>
-        <div class="col-12 col-lg-6">
-          <section id="faq" class="faq">
-            <div class="container">
-              <div class="row text-center">
-                <h1 class="logo display-5 pb-3">FAQ</h1>
-               
-                <p class="lead">Frequently asked questions, get knowledge before reaching out</p>
-              </div>
-              <div class="row mt-5">
-                <div class="col-md-12">
-                  <div class="accordion" id="accordionExample">
-                    <div class="accordion-item shadow mb-3">
-                      <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Do you do black background pet sessions?</button>
-                      </h2>
-                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">Yes. I do from small to large animals and will travel to you if enough people want pictures. 3-4 people minimum.</div>
-                      </div>
-                    </div>
-                    <div class="accordion-item shadow mb-3">
-                      <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How long does it take to get completed photos after a session?</button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">Depending on the amount of photos 1-2 weeks.</div>
-                      </div>
-                    </div>
-                    <div class="accordion-item shadow mb-3">
-                      <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How can I purchase images on the site?</button>
-                      </h2>
-                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">Images can be purchased via Pay Pal.</div>
-                      </div>
-                    </div>
-                    <div class="accordion-item shadow mb-3">
-                      <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What do you print your photos on?</button>
-                      </h2>
-                      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">I can do prints on canvas, photo paper, metal, and on glass.</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
+        <div class="accordion-item shadow mb-3">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How long does it take to get completed photos after a session?</button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">Depending on the amount of photos 1-2 weeks.</div>
+          </div>
+        </div>
+        <div class="accordion-item shadow mb-3">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How can I purchase images on the site?</button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">Images can be purchased via Pay Pal.</div>
+          </div>
+        </div>
+        <div class="accordion-item shadow mb-3">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What do you print your photos on?</button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+            <div class="accordion-body">I can do prints on canvas, photo paper, metal, and on glass.</div>
+          </div>
         </div>
       </div>
     </div>
-  </main>
+    <div class="contact">
+      <h1>Contact</h1>
+      <form>
+        <input type="text" name="name" placeholder="Name">
+        <input type="email" name="email" placeholder="Email">
+        <input type="text" name="subject" placeholder="Subject">
+        <textarea name="message" placeholder="Message"></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+</section>
 
   <!--Footer-->
   <footer class="container-fluid p-2">
