--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="TODO: Project 2 ...">
-
   <link rel="stylesheet" href="./stylesheets/main.scss">
 </head>
 
@@ -64,36 +63,44 @@
 <div class="container my-4">
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="wedding.html">
       <div class="portfolio-box shadow">
         <img src="images/Wedding Album .jpeg" alt="flowers with rings" title="wedding Album" class="img-fluid">
         <div class="portfolio-info">
           <h2>Wedding & Events</h2>
         </div>
       </div>
+      </a>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="urbangallery.html">
       <div class="portfolio-box shadow">
         <img src="images/Urban Landscape Album.jpeg" alt="city scape in sunset" title="urban landscape album" class="img-fluid">
         <div class="portfolio-info">
           <h2>Urban Landscapes</h2>
         </div>
       </div>
+      </a>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="pet.html">
       <div class="portfolio-box shadow">
         <img src="images/Pet Album.jpeg" alt="pug wearing glasses" title="pet album" class="img-fluid">
         <div class="portfolio-info">
           <h2>Pet Photography</h2>
         </div>
       </div>
+      </a>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="portfolio.html">
       <div class="portfolio-box shadow">
         <img src="images/Portfolio Album.jpeg" alt="mountain lake" title="portfolio album" class="img-fluid">
         <div class="portfolio-info">
           <h2>Portfolio Shots</h2>
         </div>
       </div>
+      </a>
     </div>
   </div>
 </div>
