--- a/src/contact.html
+++ b/src/contact.html
@@ -93,7 +93,7 @@
 </section>
 
   <!--Footer-->
-  <footer class="container-fluid p-2">
+  <footer class="container-fluid p-2 fixed-bottom">
     <div class="row">
       <div class="col-md-6 order-md-2 text-center">
         <form class="d-flex text-center" role="search">
