--- a/src/pet.html
+++ b/src/pet.html
@@ -65,34 +65,42 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="pet1.html">
         <img src="images/pet1.jpeg" alt="white cat with yellow hat"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>White Cat</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="pet2.html">
         <img src="images/pet2.jpeg" alt="corgi white background"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Corgi</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="pet3.html">
         <img src="images/pet3.jpeg" alt="kitty with flowers"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Kitten with Flowers</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="pet4.html">
         <img src="images/pet4.jpeg" alt="black and white muzzle"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Muzzle Nuzzle</h2>
         </div>
+        </a>
       </div>
     </div>
   </div>
