--- a/src/pet2.html
+++ b/src/pet2.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="TODO: Project 2 ...">
-
   <link rel="stylesheet" href="./stylesheets/main.scss">
 </head>
 
@@ -57,75 +56,53 @@
 <body>
 <!--Main image-->
 <div class="jumbotron container-fluid py-5">
-  <h1 class="logo display-5 pb-3 text-center">Urban Landscapes</h1>
+  <h1 class="logo display-5 pb-3 text-center">Pictotainment Media Inc.</h1>
 </div>
 
-<!--album options-->
-<div class="container my-4">
-  <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="portfolio-box shadow">
-        <a href="urbanlandscape1.html">
-        <img src="images/urban1.jpeg" alt="building front" title="wedding Album" class="img-fluid">
-        <div class="portfolio-info-2">
-          <h2>Building Front</h2>
-        </div>
-      </a>
+<div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="images/pet2.jpeg" alt="Descriptive Image" class="img-fluid">
       </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="portfolio-box shadow">
-        <a href="urbanlandscape2.html">
-        <img src="images/urban2.jpeg" alt="beach boulevard in sunset" title="urban landscape album" class="img-fluid">
-        <div class="portfolio-info-2">
-          <h2>Beach Boulevard</h2>
+      <div class="col-md-8">
+        <h2>Corgi</h2>
+        <p>This charming portrait features a Corgi posed against a clean, white background, allowing its distinctive features to stand out prominently. The Corgi’s expressive eyes, perky ears, and fluffy coat are showcased in sharp detail, highlighting the breed’s characteristic charm and playful nature. The simplicity of the white background emphasizes the dog’s warm colors and lively personality, making the Corgi the focal point of the image. This minimalist setting enhances the overall aesthetic, creating a striking and endearing portrayal of the beloved canine.</p>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            Purchase Options
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <li><a class="dropdown-item" href="#">Canvas $150</a></li>
+            <li><a class="dropdown-item" href="#">Metal $200</a></li>
+            <li><a class="dropdown-item" href="#">Glass $250</a></li>
+          </ul>
         </div>
-      </a>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="portfolio-box shadow">
-        <a href="urbanlandscape3.html">
-        <img src="images/urban3.jpeg" alt="night shot of a bridge with city behind" title="pet album" class="img-fluid">
-        <div class="portfolio-info-2">
-          <h2>Night Bridge</h2>
-        </div>
-      </a>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="portfolio-box shadow">
-        <a href="urbanlandscape4.html">
-        <img src="images/urban4.jpeg" alt="black and white buildings with plane" title="portfolio album" class="img-fluid">
-        <div class="portfolio-info-2">
-          <h2>Building and Plane</h2>
-        </div>
-      </a>
       </div>
     </div>
   </div>
-</div>
+  
+
 
 <!--Footer-->
-<footer class="container-fluid p-2 fixed-bottom">
-  <div class="row">
-    <div class="col-md-6 order-md-2 text-center">
-      <form class="d-flex text-center" role="search">
-        <input class="form-control me-2" type="search" placeholder="Sign up for newsletter" aria-label="Newsletter">
-        <button class="btn btn-dark" type="submit">Send</button>
-      </form>
+<footer class="container-fluid p-2">
+    <div class="row">
+      <div class="col-md-6 order-md-2 text-center">
+        <form class="d-flex text-center" role="search">
+          <input class="form-control me-2" type="search" placeholder="Sign up for newsletter" aria-label="Newsletter">
+          <button class="btn btn-dark" type="submit">Send</button>
+        </form>
+      </div>
+      <div class="col-md-6 d-none d-lg-flex flex-column text-center text-lg-start">
+        <p>Sarah Evens</p>
+        <p>(555) 123-4567</p>
+        <p><a href="mailto:sarah.evens@pictotainmentmedia.com">sarah.evens@pictotainmentmedia.com</a></p>
+        <p>1234 Maple Avenue, Suite 567, Springfield, IL 62704</p>
+  
+      </div>
     </div>
-    <div class="col-md-6 d-none d-lg-flex flex-column text-center text-lg-start">
-      <p>Sarah Evens</p>
-      <p>(555) 123-4567</p>
-      <p><a href="mailto:sarah.evens@pictotainmentmedia.com">sarah.evens@pictotainmentmedia.com</a></p>
-      <p>1234 Maple Avenue, Suite 567, Springfield, IL 62704</p>
-
-    </div>
-  </div>
-</footer>
-
-
-  <script type="module" src="./javascripts/main.js"></script>
-</body>
-</html>
+  </footer>
+  
+  
+    <script type="module" src="./javascripts/main.js"></script>
+  </body>
+  </html>
