--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -65,34 +65,42 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="portfolio1.html">
         <img src="images/portfolio1.jpeg" alt="glass buildings"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Building Reflection</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="portfolio2.html">
         <img src="images/portfolio2.jpeg" alt="older building with tree"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Older Building</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="portfolio3.html">
         <img src="images/portfolio3.jpeg" alt="down cliff with trees"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Looking Down</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="portfolio4.html">
         <img src="images/portfolio4.jpeg" alt="stack of rocks on mountain top"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Rock Stack</h2>
         </div>
+        </a> 
       </div>
     </div>
   </div>
