--- a/src/wedding.html
+++ b/src/wedding.html
@@ -65,34 +65,42 @@
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="wedding1.html">
         <img src="images/wedding1.jpeg" alt="pink and purple table setting"  class="img-fluid">
         <div class="portfolio-info-2">
-          <h2>Wedding Place</h2>
+          <h2>Table Setting</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="wedding2.html">
         <img src="images/wedding2.jpeg" alt="barn wedding table"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Wedding table</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="wedding3.html">
         <img src="images/wedding3.jpeg" alt="bride with flowers"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Bride With Flowers</h2>
         </div>
+        </a>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="portfolio-box shadow">
+        <a href="wedding4.html">
         <img src="images/wedding4.jpeg" alt="sunset bride and groom"  class="img-fluid">
         <div class="portfolio-info-2">
           <h2>Bride and Groom Sunset</h2>
         </div>
+        </a>
       </div>
     </div>
   </div>
