--- a/src/portfolio2.html
+++ b/src/portfolio2.html
@@ -65,7 +65,7 @@
         <img src="images/portfolio2.jpeg" alt="Descriptive Image" class="img-fluid">
       </div>
       <div class="col-md-8">
-        <h2>White Cat</h2>
+        <h2>Older Building</h2>
         <p>This nostalgic scene features a row of charming older buildings, complemented by a vibrant green VW Bug parked in front. The classic architecture of the buildings, with their weathered facades and detailed designs, adds a sense of history and character to the setting. A large, leafy tree stands nearby, providing a natural element that softens the urban landscape. The bright green VW Bug, with its iconic and timeless design, serves as a focal point, adding a pop of color and a touch of whimsy to the scene. This image beautifully captures the blending of history, nature, and classic automotive style, evoking a sense of timeless charm and nostalgia.</p>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
