--- a/src/portfolio3.html
+++ b/src/portfolio3.html
@@ -62,7 +62,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <img src="images/portfolio3.jpeg alt="Descriptive Image" class="img-fluid">
+        <img src="images/portfolio3.jpeg" alt="Descriptive Image" class="img-fluid">
       </div>
       <div class="col-md-8">
         <h2>Looking Down</h2>
