portfolio link added

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
         </ul>
         <li><a class="dropdown-item" href="about.html">About</a></li>
         <li><a class="dropdown-item" href="contact.html">Contact</a></li>
+        <li><a class="dropdown-item" href="https://splendid-fenglisu-0e4fd2.netlify.app">Return to Portfolio</a></li>
+        
       </ul>
       <span class="navbar-toggler-icon"></span>
     </button>
