--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
     </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="https://splendid-fenglisu-0e4fd2.netlify.app">Return to Portfolio</a>
+     </li>
       </ul>
     </div>
   </div>
